argo-cd/overlays/production/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: client-1hr-cache
spec:
  headers:
    customResponseHeaders:
      Cache-Control: max-age=3600
