argo-cd/overlays/production/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argocd.infra.rwx.im`) || Host(`argo-cd.infra.rwx.im`)
    middlewares:
    - name: argocd-redirect-https
    services:
    - name: argocd-server
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-https
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.infra.rwx.im`) || Host(`argo-cd.infra.rwx.im`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: (Host(`argocd.infra.rwx.im`) || Host(`argo-cd.infra.rwx.im`)) && Header(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    secretName: argo-cd.infra.rwx.im-tls
